# spellchecker-wasm

./: .gitignore  .nycrc  .travis.yml  Cargo.toml  CreateDictionary.cs  README.md  package-lock.json  package.json  spellchecker-wasm-0.1.3.tgz  tsconfig.json  webpack.config.ts
lib/: SpellCheckerBase.d.ts  SpellCheckerBase.js  SpellcheckerWasm.d.ts  SpellcheckerWasm.js  SpellcheckerWorker.js  SuggestedItem.d.ts  SuggestedItem.js  index.d.ts  index.js  spellchecker-wasm.js  spellchecker-wasm.wasm  utils.d.ts  utils.js
lib/browser/: SpellcheckerWasm.d.ts  SpellcheckerWasm.js  index.js
lib/nodejs/: SpellcheckerWasm.d.ts  SpellcheckerWasm.js  SpellcheckerWorker.js  index.d.ts  index.js
src/: edit_distance.rs  grapheme_iterator.rs  lib.rs  spellcheck_wasm.rs  spellchecker_wasm.rs  utils.rs
src/js/: SpellCheckerBase.ts  SpellcheckerWasm.ts  SpellcheckerWorker.ts  SuggestedItem.ts  index.ts  utils.ts
src/js/__tests__/: SpellcheckerWasm.spec.ts  SpellcheckerWorker.spec.ts  commonMisspellings_en_82_765.json  commonMisspellings_en_US_60size_1M_1gram_20090715.json  frequency_dictionary_en_82_765.txt  index.html  language_tests_map.json  small_dictionary_ru.txt  web-integration.js
src/js/browser/: SpellcheckerWasm.ts  index.ts
src/js/nodejs/: SpellcheckerWasm.ts  SpellcheckerWorker.ts
src/soft_wx/: damerau_osa.rs  helpers.rs  levensthtein.rs  mod.rs
src/sym_spell/: mod.rs  suggested_item.rs  sym_spell.rs  verbosity.rs
