[package]
name = "sym_spell_wasm"
version = "0.1.0"
authors = ["justinwilaby <jwilaby@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true